Cleaning styles & removing jQuery

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -152,6 +152,9 @@ li {
   margin: 0 auto;
   margin-bottom: 50px;
   padding: 0;
+  display: block;
+  overflow: auto;
+  height: 90vh;
   transition: opacity 100ms cubic-bezier(0.19, 1, 0.22, 1), visibility 0s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -382,11 +385,7 @@ li {
   background-color: #fff;
 }
 
-.current:hover {
-  background-color: #72b6ea;
-}
-
-.hover {
+.current:hover, .current:hover * {
   background-color: #72b6ea;
 }
 
