--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -512,7 +512,7 @@ div.shadow {
 
 @media screen and (max-width: 766px){
   p.carousel_controls {
-    //height: 120px;
+    height: 120px;
   }
 }
 
@@ -520,8 +520,6 @@ div.shadow {
   .title {
     width: 100%;
     padding: 0 !important;
-    margin: 0 auto;
-    text-align: center !important;
     font-size: 250%;
     line-height: 1.5em;
   }
