--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -510,6 +510,23 @@ div.shadow {
   align-items: center;
 }
 
+.submit-button {
+  background-color: #88CCF1;
+  border: 0px;
+  font-family: sans-serif;
+  font-weight: bold;
+  color: #fff;
+  margin-top: 10px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 3px;
+}
+.submit-button:active {
+  background-color: #5BB9EC;
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0,0,0, 0.24)
+}
+
 
 /* MEDIA QUERIES */
 
