Contact form done, send it and let the bots have it

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -526,6 +526,9 @@ div.shadow {
   transform: scale(0.98);
   box-shadow: 3px 2px 22px 1px rgba(0,0,0, 0.24)
 }
+#error {
+  visibility: hidden;
+}
 
 
 /* MEDIA QUERIES */
